css/style.css
/*********************************************

This is the style file for this project.

**********************************************/

/* FOG OF WAR */

#board {
  position: relative;
}

.fog {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(210,210,210);
  opacity: 1;
  z-index: 2000;
  margin: -1px;
  padding: 1px;
}

#fog-message {
  background-color: yellow;
  color: black;
  text-align: center;
  font-size: 1em;
  padding-left: 1em;
  display: none;
}

.note-playing {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(240,240,0,0.5);
  opacity: 1;
  z-index: -1;
  display: none;
}

.w-file-not-playing {
  border-bottom: 4px solid black;
}

.b-file-not-playing {
  border-top: 4px solid black;
}

.w-file-playing {
  border-bottom: 4px solid yellow;
}

.b-file-playing {
  border-top: 4px solid yellow;
}

.note {
  background-color: rgba(255,255,0,1);
}

.info {
  position: absolute;
  font-size: .75em;
  /* float: right; */
  opacity: 0;
  text-align: center;
  letter-spacing: normal;
  /* margin-right: 1em; */
}

.info:hover {
  transform: rotate(10deg);
}

#game {
  position: relative;
}

.info-panel {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.9);
  color: white;
  letter-spacing: normal;
  font-size: 1em;
  line-height: normal;
  z-index: 1;
  display: none;
}

.info-text {
  text-align: left;
  padding: 2em
}

/* LEWITT */

canvas {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 100;
  pointer-events: none;
}

/* GENERAL */

@font-face {
  font-family: Vera;
  src: url('../assets/fonts/VeraMoBd.ttf');
  font-weight:400;
  font-weight:normal;
}

body {
  font-family: Vera, monospace;
  margin: 0;
  padding: 0;
  background-color: black;
  user-select: none;
  -webkit-user-select: none;
}

#game {
  display: none;
  margin: 0;
  padding: 0;
}

#menu {
  /* width: 100%; */
}

#title {
  font-size: 1.5em;
  line-height: 2em;
  letter-spacing: 1em;
  color: yellow;
  text-align: center;
  padding-left: 1em;
  /* margin-bottom: 0.5em; */
}

#title.active:hover {
  cursor: pointer;
}

a {
  color: yellow;
  /* text-decoration: none; */
}

#author {
  font-size: 0.75em;
  line-height: 1em;
  letter-spacing: 1em;
  color: yellow;
  text-align: center;
  padding-left: 1em;
  padding-top: 1em;

  /* margin-bottom: 0.5em; */
}

.menu-item {
  color: white;
  font-size: 1.25em;
  line-height: 2em;
  letter-spacing: 1em;
  text-align: center;
  padding-left: 1em;
}

.menu-item.active:hover {
  background-color: white;
  color: black;
  cursor: pointer;
}

.instruction {
  font-size: 1em;
  /* display: none; */
  z-index: 500;
}

#message {
  background-color: yellow;
  color: black;
  text-align: center;
  font-size: 1em;
  letter-spacing: 1em;
  padding-left: 1em;
  display: none;
}

.option {
  /* padding-top: 1em; */
  cursor: pointer;
  display: inline-block;
}

.board-b72b1 {
  margin: 0 auto;
  border-top: .25em solid transparent;
  border-bottom: .25em solid transparent;
  border-left: none;
  border-right: none;
}

.whiteTurn {
  border-bottom: .25em solid yellow;
}

.blackTurn {
  border-top: .25em solid yellow;
}




/* MOBILE? */
@media only screen and (max-device-width: 768px) {
  body {
    font-size: 3em;
  }

  #wrapper {
    width: 100vw;
    margin: 0 auto;
  }

  #board {
    margin: 0 auto;
    width: 100vw;
  }

  .board-b72b1 {
    width: 100vw;
  }
}

/* DESKTOP and IPAD? */
@media only screen and (min-device-width: 768px) {
  body {
    font-size: 1em;
    padding-top: 2em;
  }

  #wrapper {
    width: 400px;
    margin: 0 auto;
  }

  #board {
    margin: 0 auto;
    width: 400px;
  }

  #menu {
    margin: 0 auto;
    width: 400px;
  }

  #title {
    /* margin-left: 20px */
  }

  .board-b72b1 {
    width: 400px;
  }
}

.highlight1-32417 {
  -webkit-box-shadow:inset 0 0 3px 3px red;
  box-shadow: inset 200px 200px 0px 200px rgba(255,255,0,0.5);
}

